Fixing header z-index

--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ header {
       rgba(26,29,34, 0),
       rgba(26,29,34, 1) 10%);
   user-select: none;
-  x-index: 1;
+  z-index: 10;
 }
 
 .header-logo {
